# ScriptLanguage

./: CMakeLists.txt  Instrukcja.cpp  Instrukcja.h  Int.cpp  Int.h  KodProgramu.cpp  KodProgramu.h  KodWhileIf.cpp  KodWhileIf.h  Stos.cpp  Stos.h  StosElement.cpp  StosElement.h  StosElement_Int.cpp  StosElement_Int.h  Stos_Int.cpp  Stos_Int.h  WhileIf.cpp  WhileIf.h  main.cpp
